--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ div3 {position:absolute;
 <br/> <font size = "2"color = "#999999"face = "Arial" align = "center"> <ul> İlk projem olduğu için <font size = "3" color = "b0b000">amatörce </font> olabilir. </ul> </font>
 
 <br/> <br/> <font size = "2"color = "#999999"face = "Arial" align = "center"> <ul> İstek, öneri ve iletişim için <font size = "1" color = "FFFFFF">scrayx2034@gmail.com </font> adresinden ulaşabilirsiniz. </ul> </font>
+<br/> <font align="middle" face = "Arial" color = "#999999"> <ul> ----------------------------------------------------------------------------------------------------- </ul> </font>
+
+ <br/> <font align="center" face = "Arial" color = "#6a1b9a"><h1> Soru & Cevap </h1> </font> 
+
+<iframe src="https://www5.cbox.ws/box/?boxid=918136&boxtag=L1vEu8" align = "center" width="100%" height="250" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
 
 <font align="center" face = "Arial" color = "#999999"> <ul> -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- </ul>  </font>
 </body>
