--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <hr />
 <br/> <br/> <br/> <br/> <font size = "10"color = "#c2ab00"face = "Arial" align = "center"><center>Eren<font color = "#FFFFFF">(köylü)</font>possible'ın Götünden Çıkmayan Şeyler Top 7 <center> </font> 
 
-</br> </br> </br> </br> </br> </br> </br><center><iframe width="560" height="315" src="https://www.youtube.com/watch?v=mE0U456_k74" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>  
+</br> </br> </br> </br> </br> </br> </br><center><iframe width="560" height="315" src="https://www.youtube.com/embed/mE0U456_k74" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>  
 
 <br/> <br/> <br/> <br/><br/> <br/> <br/> <br/><hr />
 </body>
