--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <html>
 
-<head>
-<title>Erenin Götünden Çıkmayan Şeyler</title>
 
-<style>body {
-    background-color: #000000;
-}
- </style>
+<head>
+
+<title> Redirecting... </title> 
 
 </head>
-
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/"> 
 <body>
-<hr />
-<br/> <br/> <br/> <br/> <font size = "10"color = "#c2ab00"face = "Arial" align = "center"><center>Eren<font color = "#FFFFFF">(köylü)</font>possible'ın Götünden Çıkmayan Şeyler Top 7 <center> </font> 
+<h1>Redirecting...</h1>
 
-</br> </br> </br> </br> </br> </br> </br><center><iframe width="560" height="315" src="https://www.youtube.com/embed/mE0U456_k74" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>  
-
-<br/> <br/> <br/> <br/><br/> <br/> <br/> <br/><hr />
+curl https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg
 </body>
+
+
 </html>
