--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
 
 <title> Redirecting... </title> 
 
+<meta http-equiv="refresh" content="30; url=https://www.youtube.com/watch?v=4UpyM2AphnM">
+  
 </head>
-<meta http-equiv="refresh" content="0; url=https://www.youtube.com/"> 
+
+
 <body>
+
 <h1>Redirecting...</h1>
 
-curl https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg
+curl https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg <br/> <br/> <br/> <br/>
+
+<img border="0" src="https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg">
+
 </body>
 
 
