--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 
-
+<meta property="og:type" content="website">
 <meta name="og:image" itemprop="image" content="https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg">
 
 </head>
