--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <h1>Redirecting...</h1>
 
-<img border="0" src="https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg">
+<img border="0" src="/125518626_100219558589168_5857547998506838528_o.jpg">
 
 </body>
 
