--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <title> Redirecting... </title> 
 
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/"> 
 
 <meta property="og:site_name" content="Njcvajövce">
 <meta property="og:url" content="https://domain.com">
