--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="refresh" content="0; url=https://www.youtube.com/"> 
 
 <meta property="og:site_name" content="Njcvajövce">
-<meta property="og:url" content="https://domain.com">
+<meta property="og:url" content="/125518626_100219558589168_5857547998506838528_o.jpg">
 <meta property="og:title" content="uieuie">
 <meta property="og:description" content="uieuieuie">
 <meta property="og:type" content="website">
