--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <meta http-equiv="refresh" content="0; url=https://www.youtube.com/"> 
 
-<meta property="og:site_name" content="Njcvajövce">
+<meta property="og:site_name" content="">
 <meta property="og:url" content="/125518626_100219558589168_5857547998506838528_o.jpg">
-<meta property="og:title" content="uieuie">
-<meta property="og:description" content="uieuieuie">
+<meta property="og:title" content="">
+<meta property="og:description" content="">
 <meta property="og:type" content="website">
 <meta name="og:image" itemprop="image" content="https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg">
 
