--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta http-equiv="refresh" content="0; url=https://www.youtube.com/"> 
 
-<meta property="og:site_name" content="">
+<meta property="og:site_name" content="u">
 <meta property="og:url" content="/125518626_100219558589168_5857547998506838528_o.jpg">
 <meta property="og:title" content="">
 <meta property="og:description" content="">
