--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
- <html> 
- <head> 
- <meta charset="utf-8"> 
- <title>:(</title> 
- <style>
-body {
-background-color: #000000
-}
-</style>
- </head> 
- <body>
-<object width="1280" height="720"><param name="movie" value="http://www.youtube.com/v/7unENFLHAVs?version=3&amp;hl=en_US&amp;rel=0&amp;autoplay=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/7unENFLHAVs?version=3&amp;hl=en_US&amp;rel=0&amp;autoplay=1" type="application/x-shockwave-flash" width="560" height="345" allowscriptaccess="always" allowfullscreen="true"></embed></object>
- </body> 
- </html> 
+<html>
+
+
+<head>
+
+<title> Redirecting... </title> 
+
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=7unENFLHAVs"> 
+
+<meta property="og:site_name" content="u">
+<meta property="og:url" content="/125518626_100219558589168_5857547998506838528_o.jpg">
+<meta property="og:title" content="">
+<meta property="og:description" content="">
+<meta property="og:type" content="website">
+<meta name="og:image" itemprop="image" content="https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg">
+
+</head>
+
+
+
+<body>
+
+<h1>Redirecting...</h1>
+
+<img border="0" src="/125518626_100219558589168_5857547998506838528_o.jpg">
+
+</body>
+
+
+</html>
