--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <title> Redirecting... </title> 
 
-<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=7unENFLHAVs"> 
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=8uH7WYlLPhA"> 
 
 <meta property="og:site_name" content="u">
 <meta property="og:url" content="/125518626_100219558589168_5857547998506838528_o.jpg">
