--- a/index.html
+++ b/index.html
@@ -1,30 +1,196 @@
+<!DOCTYPE html>
 <html>
-
-
 <head>
+<title> Agengos Türkei </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
 
-<title> Redirecting... </title> 
+* {
+  box-sizing: border-box;
+}
 
-<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=8uH7WYlLPhA"> 
+body {
+  margin: 0;
+  font-family: Arial;
+  font-size: 17px;
+}
 
-<meta property="og:site_name" content="u">
-<meta property="og:url" content="/125518626_100219558589168_5857547998506838528_o.jpg">
-<meta property="og:title" content="">
-<meta property="og:description" content="">
-<meta property="og:type" content="website">
-<meta name="og:image" itemprop="image" content="https://media.discordapp.net/attachments/773600449453752320/790210658103853126/82387381_616675712468955_5954056271307997184_n.jpg">
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+}
 
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+.brh {
+  position: fixed;
+  width: 100%;
+  padding: 250px;
+}
+
+.indr {
+  position: fixed;
+  width: 100%;
+}
+
+.link {
+  position: fixed;
+  width: 100%;
+  padding: 90px;
+}
+
+.linkler {
+  position: fixed;
+  color: #f1f1f1;
+  width: 100%;
+  padding: 190px;
+}
+
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: #ddd;
+  color: black;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+</style>
 </head>
-
-
-
 <body>
 
-<h1>Redirecting...</h1>
+<h2>Modal Example</h2>
 
-<img border="0" src="/125518626_100219558589168_5857547998506838528_o.jpg">
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Discord adresine yönlendirildi...</p>
+  </div>
+
+</div>
+
+<video autoplay muted loop id="myVideo">
+  <source src="back.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+
+<div class="brh">
+<center><img src="among.png" alt="Among Us Tr Logo"></center>
+</div>
+
+<div class="link">
+<center><img src="linkler.png" alt="Link tusu"></center>
+</div>
+
+<div class="linkler">
+<a href = "https://drive.google.com/file/d/13vDpvN36q4k5Sp_VN4_SmedHHZiWjyIQ/view?usp=sharing" target = "_blank"><p style="text-align:center;"><font size = "2">Google Drive</font></p></a>
+<a href = "https://s5.dosya.tc/server/57p1fy/SjScanner.rar.html" target = "_blank"><p style="text-align:center;"><font size = "2">Dosya Tc</font></p></a>
+<a href = "http://www.mediafire.com/file/az0lufnz7wztd2r/SjScanner.rar/file" target = "_blank"><p style="text-align:center;"><font size = "2">MediaFire</font></p></a>
+<a href = "https://disk.yandex.com.tr/d/iou8BusXL6Jj3g" target = "_blank"><p style="text-align:center;"><font size = "2">Yandex Disk</font></p></a>
+</div>
+
+<div class="indr">
+<a href = "http://www.google.com" target = "_blank"><center><img src="indir.png" alt="Indir tusu" width="250" height="150"></center></a>
+</div>
+
+<div class="content">
+<p style="text-align:center;"><font size = "2">Emeği Geçenler</font></p>
+<p style="text-align:center;"><font size = "1">Çapo</font></p>
+<p style="text-align:center;"><font size = "1">Kawai Hentai Girl Demirkan</font></p>
+<p style="text-align:center;"><font size = "1">Travesti Bera</font></p></br>
+<p style="text-align:center;"><font size = "1">Agengos Türkei️®️ Pipimin tüm hakları saklıdır...</font></p>
+<a href="https://discord.gg/amongustr" target="_blank">
+<button id="myBtn">Discord Adresine Git !</button>
+</a>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
 
 </body>
-
-
 </html>
