--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body {
 </div>
 
 <div class="indr">
-<a href = "http://www.google.com" target = "_blank"><center><img src="indir.png" alt="Indir tusu" width="250" height="150"></center></a>
+<a href = "https://drive.google.com/u/0/uc?export=download&confirm=cTQ8&id=13vDpvN36q4k5Sp_VN4_SmedHHZiWjyIQ" target = "_blank"><center><img src="indir.png" alt="Indir tusu" width="250" height="150"></center></a>
 </div>
 
 <div class="content">
