--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <title> Agengos Türkei </title>
 <link rel="icon" href="icon.ico" />
+  
+<meta content="Agengos Turkei" property="og:title">
+<meta content="SjScanner download Website" property="og:description">
+<meta content="among.png" property="og:image">
+<meta content="#43B581" data-react-helmet="true" name="theme-color">
+  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
